--- a/CSS-Practice/css/style.css
+++ b/CSS-Practice/css/style.css
@@ -27,8 +27,8 @@ section.firstSection {
 }
 
 img{
-    width: 40vw;
-    height: 40vh;
+    width: 50%;
+    height: 400px;
 }
 
 section.secondSection {
