--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -1,41 +1,31 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;500&family=Poppins:wght@100;600&family=Raleway&family=Secular+One&display=swap');
 
-
-
-.App {
-  text-align: center;
+body {
+  width: 100%;
+  height: 100%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+span {
+  color: #009CF9
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.button {
+  font-family: "Raleway", sans-serif;
+  font-weight: bold !important;
+  border-radius: 5px;
+  border: 2px solid;
+  border-color: #009CF9 !important;
+  background-color: #009CF9 !important;
+  color: #fff !important;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  transition: 0.4s all ease;
+  height: 50px;
+  width: 150px;
+}
+.button:focus,
+.button:active {
+  box-shadow: 0 0 0 5px rgba(0, 156, 249, 0.5) !important;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
